# ProyectoIntegrador

./: CMakeLists.txt  Episodio.cpp  Episodio.h  Pelicula.cpp  Pelicula.h  README.md  Serie.cpp  Serie.h  TestPelicula.cpp  Video.cpp  Video.h  sonar-project.properties  streamingMain.cpp  streaming_main.cpp
test/: test_episodio.cpp  test_main-cpp  test_main.cpp  test_pelicula.cpp  test_serie.cpp  test_video.cpp
